feat:refatoracao do projeto, adicionando flyway,dockerCompose,role